--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ body {
 
 .navbar {
   font-weight: 500;
-  line-height: 1, 5;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-decoration: none;
@@ -64,7 +64,7 @@ body {
 }
 
 .my-info {
-  line-height: 1, 5;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
   text-decoration: none;
@@ -82,7 +82,7 @@ body {
 .table-text {
   font-weight: 700;
   font-size: 56px;
-  line-height: 1, 07;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   color: #ffffff;
   text-align: center;
@@ -91,7 +91,7 @@ body {
 .table-button {
   background-color: #2e2f42;
   font-weight: 500;
-  line-height: 1, 5;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   color: #ffffff;
   background-color: #4d5ae5;
@@ -100,7 +100,7 @@ body {
 
 .table-button:hover,
 .table-button:focus {
-  color: #404bbf;
+  background-color: #404bbf;
 }
 
 .advantages-list {
@@ -114,13 +114,13 @@ body {
 .advantages {
   font-weight: 500;
   font-size: 20px;
-  line-height: 1, 2;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
 
 .advantages-text {
-  line-height: 1, 5;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
@@ -132,7 +132,7 @@ body {
 .team {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1, 111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-align: center;
@@ -150,7 +150,7 @@ body {
 .team-name {
   font-weight: 500;
   font-size: 20px;
-  line-height: 1, 2;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-align: center;
@@ -158,7 +158,7 @@ body {
 }
 
 .team-position {
-  line-height: 1, 5;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
@@ -166,7 +166,7 @@ body {
 .portfolio {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1, 111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-align: center;
@@ -179,13 +179,14 @@ body {
 .portfolio-name {
   font-weight: 500;
   font-size: 20px;
-  line-height: 1, 2;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  text-transform: capitalize;
 }
 
 .portfolio-text {
-  line-height: 1, 5;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
@@ -195,7 +196,7 @@ body {
 }
 
 .last-text {
-  line-height: 1, 5;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
 }
