--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,7 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-align: center;
+  text-transform: capitalize;
 }
 
 .portfolio-list {
