--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,11 @@ img {
 
 .table {
   background-color: #2e2f42;
-  height: 600px;
+}
+
+.container-table {
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .table-text {
@@ -140,8 +144,7 @@ img {
   letter-spacing: 0.02em;
   color: #ffffff;
   text-align: center;
-  padding-top: 188px;
-  padding-bottom: 48px;
+  margin-bottom: 48px;
 }
 
 .table-button-wrapper {
@@ -158,7 +161,6 @@ img {
   cursor: pointer;
   padding: 16px 32px;
   border-radius: 4px;
-  margin: 0 auto;
 }
 
 .table-button:hover,
