--- a/css/styles.css
+++ b/css/styles.css
@@ -26,19 +26,20 @@ img {
   max-width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 120px;
-  padding-bottom: 120px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.header-container {
+.header-wrap {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.container-header {
   display: flex;
   justify-content: space-between;
   max-width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
-
   margin-left: auto;
   margin-right: auto;
 }
@@ -46,6 +47,7 @@ img {
 .nav-wrap {
   display: flex;
   border-bottom: 1px solid var(--cornflower);
+  align-items: center;
 }
 
 .logo {
@@ -89,6 +91,7 @@ img {
   list-style-type: none;
   display: flex;
   padding: 24px 0;
+  gap: 40px;
 }
 
 .navbar {
@@ -97,7 +100,7 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-decoration: none;
-  margin-right: 40px;
+  padding: 24px 0;
 }
 
 .navbar:hover,
@@ -108,6 +111,7 @@ img {
 .my-address {
   font-style: normal;
   padding: 24px 0;
+  gap: 40px;
 }
 
 .my-info-list {
@@ -133,8 +137,7 @@ img {
 }
 
 .container-table {
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding: 188px 0;
 }
 
 .table-text {
@@ -145,14 +148,13 @@ img {
   color: #ffffff;
   text-align: center;
   margin-bottom: 48px;
-}
-
-.table-button-wrapper {
-  text-align: center;
+  max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .table-button {
-  background-color: #2e2f42;
+  background-color: #4d5ae5;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
@@ -161,6 +163,11 @@ img {
   cursor: pointer;
   padding: 16px 32px;
   border-radius: 4px;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  margin: 0 auto;
 }
 
 .table-button:hover,
@@ -168,8 +175,22 @@ img {
   background-color: #404bbf;
 }
 
+.advatages-section {
+  padding: 120px 0;
+}
+
 .our-advatages {
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .advantages-list {
@@ -181,7 +202,7 @@ img {
 
 .advantages-box {
   background-color: #ffffff;
-  width: calc((100% - 3 * 24) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 .advantages {
@@ -201,6 +222,7 @@ img {
 
 .table-team {
   background: #f4f4fd;
+  padding: 120px 0;
 }
 
 .team {
@@ -211,7 +233,7 @@ img {
   color: #2e2f42;
   text-align: center;
   text-transform: capitalize;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .team-list {
@@ -222,10 +244,15 @@ img {
 
 .team-page {
   background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-page p {
   text-align: center;
+}
+
+.team-info {
+  padding: 32px 0;
 }
 
 .team-name {
@@ -236,7 +263,6 @@ img {
   color: #2e2f42;
   text-align: center;
   text-transform: capitalize;
-  padding-top: 32px;
   margin-bottom: 8px;
 }
 
@@ -244,7 +270,11 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  padding-bottom: 32px;
+  text-align: center;
+}
+
+.portfolio-section {
+  padding: 120px 0 120px 0;
 }
 
 .portfolio {
@@ -255,14 +285,25 @@ img {
   color: #2e2f42;
   text-align: center;
   text-transform: capitalize;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .portfolio-list {
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.portfolio-wrapper {
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  padding: 32px 16px;
 }
 
 .portfolio-name {
@@ -272,8 +313,6 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-transform: capitalize;
-  padding-top: 32px;
-  padding-left: 16px;
   margin-bottom: 8px;
 }
 
@@ -281,12 +320,16 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  padding-left: 16px;
-  padding-bottom: 32px;
 }
 
 .bottombar {
   background-color: #2e2f42;
+  padding: 100px 0;
+}
+
+.logo-bottom {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .last-text {
@@ -294,5 +337,4 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   width: 264px;
-  margin-top: 16px;
 }
