--- a/css/styles.css
+++ b/css/styles.css
@@ -37,11 +37,6 @@ img {
 .container-header {
   display: flex;
   justify-content: space-between;
-  max-width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .nav-wrap {
@@ -117,6 +112,7 @@ img {
 .my-info-list {
   list-style-type: none;
   display: flex;
+  gap: 40px;
 }
 
 .my-info {
@@ -124,7 +120,6 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
   text-decoration: none;
-  margin-right: 40px;
 }
 
 .my-info:hover,
@@ -134,9 +129,6 @@ img {
 
 .table {
   background-color: #2e2f42;
-}
-
-.container-table {
   padding: 188px 0;
 }
 
