--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,7 @@ img {
   display: flex;
   padding: 24px 0;
   gap: 40px;
+  position: relative;
 }
 
 .navbar {
@@ -94,11 +95,28 @@ img {
   color: #2e2f42;
   text-decoration: none;
   padding: 24px 0;
+  transition-property: color;
+}
+
+.active {
+  color: #404bbf;
 }
 
 .navbar:hover,
 .navbar:focus {
   color: #404bbf;
+}
+
+.navbar-iteam:first-child .navbar::after {
+  content: "";
+  display: inline-block;
+  border-radius: 2px;
+  width: 48px;
+  height: 4px;
+  background: #404bbf;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .my-address {
@@ -118,6 +136,7 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
   text-decoration: none;
+  transition-property: color;
 }
 
 .my-info:hover,
@@ -128,6 +147,12 @@ img {
 .table {
   background-color: #2e2f42;
   padding: 188px 0;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
 }
 
 .table-text {
@@ -195,6 +220,23 @@ img {
   width: calc((100% - 72px) / 4);
 }
 
+.svg-box {
+  width: 264px;
+  height: 112px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  background-color: #f4f4fd;
+  position: relative;
+  margin-bottom: 8px;
+}
+
+.svg-box-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .advantages {
   font-weight: 500;
   font-size: 20px;
@@ -235,6 +277,8 @@ img {
 .team-page {
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-page p {
@@ -261,6 +305,35 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
+  margin-bottom: 8px;
+}
+
+.sothial-box {
+  width: 232px;
+  height: 40px;
+  margin: 0 auto;
+}
+
+.sothial-menu {
+  display: flex;
+  gap: 24px;
+  list-style-type: none;
+}
+
+.sothial-items {
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  position: relative;
+}
+
+.sothial-items-picture {
+  fill: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
 }
 
 .portfolio-section {
@@ -288,6 +361,12 @@ img {
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  transition-property: box-shadow;
+}
+
+.portfolio-item:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-wrapper {
@@ -317,6 +396,16 @@ img {
   padding: 100px 0;
 }
 
+.bottom-container {
+  display: flex;
+  gap: 120px;
+}
+
+.first-container {
+  width: 264px;
+  height: 112px;
+}
+
 .logo-bottom {
   display: inline-block;
   margin-bottom: 16px;
@@ -327,4 +416,18 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   width: 264px;
+}
+
+.second-container {
+  width: 208px;
+  height: 80px;
+}
+
+.social-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: white;
+  margin-bottom: 16px;
 }
