--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ img {
   color: #2e2f42;
   text-decoration: none;
   padding: 24px 0;
-  transition-property: color;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .active {
@@ -136,7 +136,7 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
   text-decoration: none;
-  transition-property: color;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .my-info:hover,
@@ -145,6 +145,7 @@ img {
 }
 
 .table {
+  max-width: 1440рх;
   background-color: #2e2f42;
   padding: 188px 0;
   background-image: linear-gradient(
@@ -183,6 +184,7 @@ img {
   height: 56px;
   border: none;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .table-button:hover,
@@ -361,12 +363,43 @@ img {
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
-  transition-property: box-shadow;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-blue-box {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-item:hover .overlay {
+  transform: translateY(0);
+}
+
+.overlay {
+  background-color: #4d5ae5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
+}
+
+.overlay-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
 }
 
 .portfolio-wrapper {
