--- a/css/styles.css
+++ b/css/styles.css
@@ -30,8 +30,11 @@ img {
   margin-right: auto;
 }
 
+/* header */
 .header-wrap {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .container-header {
@@ -85,7 +88,9 @@ img {
   display: flex;
   padding: 24px 0;
   gap: 40px;
-  position: relative;
+}
+
+.navbar-iteam {
 }
 
 .navbar {
@@ -100,6 +105,7 @@ img {
 
 .active {
   color: #404bbf;
+  position: relative;
 }
 
 .navbar:hover,
@@ -116,7 +122,7 @@ img {
   background: #404bbf;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
 }
 
 .my-address {
@@ -144,8 +150,10 @@ img {
   color: #404bbf;
 }
 
+/* section one */
 .table {
-  max-width: 1440рх;
+  max-width: 1440px;
+  margin: 0 auto;
   background-color: #2e2f42;
   padding: 188px 0;
   background-image: linear-gradient(
@@ -154,6 +162,9 @@ img {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .table-text {
@@ -192,6 +203,7 @@ img {
   background-color: #404bbf;
 }
 
+/* section two */
 .advatages-section {
   padding: 120px 0;
 }
@@ -223,20 +235,18 @@ img {
 }
 
 .svg-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 264px;
   height: 112px;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   background-color: #f4f4fd;
-  position: relative;
   margin-bottom: 8px;
 }
 
 .svg-box-image {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .advantages {
@@ -254,6 +264,7 @@ img {
   color: #434455;
 }
 
+/* section three */
 .table-team {
   background: #f4f4fd;
   padding: 120px 0;
@@ -311,15 +322,15 @@ img {
 }
 
 .sothial-box {
-  width: 232px;
-  height: 40px;
-  margin: 0 auto;
 }
 
 .sothial-menu {
   display: flex;
   gap: 24px;
   list-style-type: none;
+  width: 232px;
+  height: 40px;
+  margin: 0 auto;
 }
 
 .sothial-items {
@@ -338,6 +349,7 @@ img {
   position: absolute;
 }
 
+/* section four */
 .portfolio-section {
   padding: 120px 0 120px 0;
 }
@@ -424,6 +436,7 @@ img {
   color: #434455;
 }
 
+/* footer */
 .bottombar {
   background-color: #2e2f42;
   padding: 100px 0;
@@ -431,12 +444,13 @@ img {
 
 .bottom-container {
   display: flex;
-  gap: 120px;
+  align-items: baseline;
 }
 
 .first-container {
   width: 264px;
   height: 112px;
+  margin-right: 120px;
 }
 
 .logo-bottom {
