--- a/css/styles.css
+++ b/css/styles.css
@@ -321,9 +321,6 @@ img {
   margin-bottom: 8px;
 }
 
-.sothial-box {
-}
-
 .sothial-menu {
   display: flex;
   gap: 24px;
@@ -331,22 +328,32 @@ img {
   width: 232px;
   height: 40px;
   margin: 0 auto;
+  justify-content: center;
 }
 
 .sothial-items {
   width: 40px;
   height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.sothial-items-href {
+  width: 100%;
+  height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sothial-items-href:hover,
+.sothial-items-href:focus {
+  background-color: #404bbf;
 }
 
 .sothial-items-picture {
-  fill: white;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
+  fill: #f4f4fd;
 }
 
 /* section four */
@@ -389,7 +396,7 @@ img {
 }
 
 .portfolio-item:hover .overlay {
-  transform: translateY(0);
+  transform: translateY(0%);
 }
 
 .overlay {
@@ -403,7 +410,7 @@ img {
   transform: translateY(100%);
 }
 
-.overlay-text {
+.up-text {
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
@@ -477,4 +484,35 @@ img {
   letter-spacing: 0.02em;
   color: white;
   margin-bottom: 16px;
+}
+
+.sothial-menu-bottom {
+  display: flex;
+  gap: 16px;
+  list-style-type: none;
+  width: 232px;
+  height: 40px;
+  justify-content: center;
+}
+
+.sothial-items-bottom {
+  width: 40px;
+  height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.sothial-items-href-bottom {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+}
+
+.sothial-items-href-bottom:hover,
+.sothial-items-href-bottom:focus {
+  background-color: #31d0aa;
 }
