--- a/css/styles.css
+++ b/css/styles.css
@@ -334,7 +334,6 @@ img {
 .sothial-items {
   width: 40px;
   height: 40px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .sothial-items-href {
@@ -345,6 +344,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .sothial-items-href:hover,
@@ -395,11 +395,11 @@ img {
   overflow: hidden;
 }
 
-.portfolio-item:hover .overlay {
+.portfolio-blue-box:hover .up-text {
   transform: translateY(0%);
 }
 
-.overlay {
+.up-text {
   background-color: #4d5ae5;
   position: absolute;
   top: 0;
@@ -408,17 +408,12 @@ img {
   height: 100%;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateY(100%);
-}
-
-.up-text {
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  padding-top: 40px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding: 40px 32px;
 }
 
 .portfolio-wrapper {
@@ -490,15 +485,12 @@ img {
   display: flex;
   gap: 16px;
   list-style-type: none;
-  width: 232px;
-  height: 40px;
   justify-content: center;
 }
 
 .sothial-items-bottom {
   width: 40px;
   height: 40px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .sothial-items-href-bottom {
@@ -509,7 +501,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .sothial-items-href-bottom:hover,
