--- a/css/styles.css
+++ b/css/styles.css
@@ -517,11 +517,10 @@ img {
 
 .bottombar-form {
   display: flex;
+  gap: 24px;
 }
 
 .bottombar-label {
-  display: flex;
-  gap: 24px;
 }
 
 .bottombar-email {
@@ -532,6 +531,7 @@ img {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #2e2f42;
   padding-left: 16px;
+  background-color: transparent;
 }
 
 .bottombar-email:placeholder-shown {
@@ -544,34 +544,30 @@ img {
 }
 
 .bottombar-button {
-  border-radius: 4px;
-  border: none;
-  padding: 8px 24px;
-  min-width: 165px;
-  height: 40px;
-  background: #4d5ae5;
   display: flex;
   justify-content: center;
+  min-width: 165px;
+  height: 40px;
   align-items: center;
-  font-family: inherit;
-  font-weight: 500;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
-  line-height: 150%;
+  font-weight: 500;
+  line-height: 1.5;
   letter-spacing: 0.04em;
-  text-align: center;
   color: #ffffff;
   cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
 }
 
 .bottombar-button-picture {
   fill: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin-left: 16px;
 }
 
-/* input-menu */
+/* backdrop */
+
 .backdrop {
   position: relative;
   flex-direction: column;
@@ -582,8 +578,8 @@ img {
   width: 100%;
   height: 100%;
   z-index: 999;
-  opacity: 0;
-  pointer-events: none;
+  opacity: 1;
+  pointer-events: auto;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -626,11 +622,7 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.exit-button:hover {
-  background-color: #404bbf;
-  border: none;
-}
-
+.exit-button:hover,
 .exit-button:focus {
   background-color: #404bbf;
   border: none;
@@ -641,9 +633,9 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.exit-button-svg:hover, 
-.exit-button-svg:focus {
-  fill: #ffffff
+.exit-button:hover .exit-button-svg,
+.exit-button:focus .exit-button-svg {
+  fill: #ffffff;
 }
 
 .input-menu-form-name {
@@ -745,6 +737,20 @@ img {
   margin-bottom: 24px;
 }
 
+.invisibility-box {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .label-privacy-policy {
   font-weight: 400;
   font-size: 12px;
@@ -758,10 +764,19 @@ input[type="checkbox"] {
 }
 
 .privacy-policy-span {
-  line-height: 133%;
-  text-decoration: underline;
-  text-decoration-skip-ink: none;
-  color: var(--iris);
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+
+.privacy-policy-svg {
 }
 
 .input-menu-site {
